# laser-link-scheduler

./: .gitignore  .pre-commit-config.yaml  LLS_milp.py  Makefile  OTLS_milp.py  README.md  brute_force_matching.py  constants.py  contact_plan.py  dag_topology_reduction.py  link_acq_delay_model.py  lls.py  main.py  main_ablation_study.py  metrics.py  networkx_test.py  otls_ablation_study.sh  pat_delay_model.py  path_solver.py  pointing_delay_model.py  pyproject.toml  report.csv  report_generator.py  requirements.txt  run_all.sh  run_all_dte_scenarios.sh  run_all_gs.sh  run_all_gs_inc.sh  run_all_gs_inc_fast.sh  run_all_lls.sh  schedule.py  scheduler.py  time_expanded_graph.py  update_static_mocks.py  utils.py  weights.py
IPN-D_scenarios/configuration_mars_earth_scenario/: config.json
IPN-D_scenarios/configuration_mars_earth_simple_scenario/: config.json  contactPlan.json
IPN-D_scenarios/configuration_mars_earth_test_scenario/: config.json  contactPlan.json
IPN-D_scenarios/optical_ground_station/: contactPlan.json
IPN-D_scenarios/optical_ground_station_dte/: bundlePlan.json  config.json  contactPlan.json
analysis/: coarse_pointing_slew.py  dag_topology_reduction.py  dte_realistic_scenario_plots.py  fou_plot.py  gen_arch_hex_spiral_animated.py  retargeting_delay_analysis.py  retargeting_delay_pdf_and_hist.py  slew_rate_plot.py  visualize_metrics.py  visualize_metrics_dte_incremental_runs.py  visualize_metrics_incremental_runs.py  weights_grid.py
contact_plan/: contact_plan.py  contact_plan_parser.py
experiments/: mars_earth_scenario_contact_plan  mars_earth_simple_scenario_contact_plan  mars_earth_simple_scenario_contact_plan_scheduled  mars_earth_simple_scenario_contact_plan_teg  mars_earth_test2_scenario_contact_plan  mars_earth_test2_scenario_contact_plan_teg  mars_earth_test_scenario_contact_plan  mars_earth_test_scenario_contact_plan_scheduled  mars_earth_test_scenario_contact_plan_teg  sample_contact_plan  sample_contact_plan_scheduled
laser_link_scheduler/: constants.py  utils.py
milp_model/: LLS_milp.py
model_testing/: gurobi_test.py
scripts/: lls_sensitivity_analysis.sh  run_all.sh  run_all_dte_scenarios.sh  run_all_gs.sh  run_all_gs_inc.sh  run_all_gs_inc_fast.sh  run_all_lls.sh  run_all_mars_earth_relay_reduced_scenarios.sh  run_all_mars_earth_relay_scenarios.sh  run_all_mars_relay_earth_scenarios.sh  run_dte_realistic_scenario.sh
tests/: gurobi_test.py  test_performance_regression.py  test_topology_correctness.py  testing_utils.py
time_expanded_graph/: time_expanded_graph.py
(+925 files in other folders)
