[project]
name = "laser-link-scheduler"
version = "0.1.0"
description = "Scheduling algorithm for free-space laser communication in delay/disruption tolerant deep space networks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "exceptiongroup==1.2.2",
    "fonttools==4.53.1",
    "iniconfig==2.0.0",
    "kiwisolver==1.4.5",
    "matplotlib>=3.9.2",
    "networkx==3.3",
    "numpy==2.0.1",
    "packaging==24.1",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "pluggy==1.5.0",
    "pulp==2.9.0",
    "pyparsing==3.1.2",
    "pyqt6==6.7.1",
    "pyqt6-qt6==6.7.2",
    "pyqt6-sip==13.8.0",
    "pytest==8.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "scipy==1.14.0",
    "six==1.16.0",
    "tomli==2.0.1",
    "tqdm==4.66.4",
    "tzdata==2024.1",
]
