[project]
name = "laser-link-scheduler"
version = "0.1.0"
description = "Scheduling algorithm for free-space laser communication in delay/disruption tolerant deep space networks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "exceptiongroup==1.2.2",
    "fonttools==4.53.1",
    "gurobipy>=13.0.1",
    "iniconfig==2.0.0",
    "ipdb>=0.13.13",
    "kiwisolver==1.4.5",
    "matplotlib>=3.9.2",
    "networkx==3.3",
    "numpy==2.0.1",
    "packaging==24.1",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "pluggy==1.5.0",
    "pulp==2.9.0",
    "pyparsing==3.1.2",
    "pyqt6==6.7.1",
    "pyqt6-qt6==6.7.2",
    "pyqt6-sip==13.8.0",
    "pytest==8.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "rich>=14.2.0",
    "scipy==1.14.0",
    "six==1.16.0",
    "tomli==2.0.1",
    "tqdm==4.66.4",
    "tzdata==2024.1",
    "pytest>=8.3.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
    "typer>=0.21.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
]

# W291: trailing whitespace
# W293: blank line contains whitespace
extend-select = ["W291", "W293"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
force-sort-within-sections = true
order-by-type = false
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["src"]

[tool.ruff.format]
line-ending = "auto"
